--- a/index.css
+++ b/index.css
@@ -171,9 +171,9 @@ button {
 .message_item {
     margin-top: 1em !important;
 }
-path[fill="#f5f6f7"],
-circle[fill="#f5f6f7"]{
-fill: rgba(0, 0, 0, 0.22) !important;
+path[fill="#ccc"],
+circle[fill="#ccc"]{
+fill: #222 !important;
 }
             /********* IMAGES *********/
 img[alt="Ответить"] {
