--- a/index.css
+++ b/index.css
@@ -4,17 +4,10 @@
 }
 body {
     background-color: #252525 !important;
-    background-attachment: fixed !important;
-    background-clip: border-box !important;
-    background-origin: padding-box !important;
-    background-position: center center !important;
-    background-repeat: no-repeat !important;
 }
-
 .minipagelink, .minipagelinklast {
     border: none !important;
 }
-
 .borderwrap.read .row2, .borderwrap.read .post2, .borderwrap.read .post1, .borderwrap.read td.formbuttonrow,
 .lb-outerContainer, #logostrip, #header, #navbar, #replace_navbar, #list_wrapper, #footer, .menupopup .menu .item, .bg3, .activeusers, select, input.button, .plainborder, .tablefill, .tablepad, .borderwrap p, .popmenubutton-new, .popmenubutton, .hidemain, .post-edit-reason, #dw-wrapper, #dw-top, #dw-bottom, .pp-image-thumb-wrap, .pp-image-thumb-wrap-floatright, .pp-image-mini-wrap, .pp-image-mini-wrap-floatright, .resized-linked-image, .darkrow3, .postcolor, .attach-menubutton, .list_item:hover,  #welcome, .errorwrap, #redirectwrap, .attach-messagediv, .exdiv, #ucpmenu, #ucpcontent, .borderwrap, .borderwrapm, .formtable td, .pformleft, .pformleftw, .pformright, .qms_unread_row, .ed-wrap .ed-p-textarea, .bb-panel-button:hover, .check_list_div, .fieldwrap, .post-block > .block-body, .header, .sidebar, .footer-panel, .search-form, .events-count, .i-code:hover, .slider-content:after, .input-wrap, .captcha, .ed-wrap, td, #ed-0_wrap.ed_wrap, #contacts {
     background: none !important;
@@ -24,7 +17,6 @@ body {
 body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-checkbox, input, textarea, select, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .forumdesc, .forumdesc a:link, .forumdesc a:visited, .forumdesc a:active, table.ipbtable, tr.ipbtable, td.ipbtable, .usercp_menu, .usercp_menu_out, .popmenubutton-new, .pp-header, .pp-tiny-text, .popupmenu-item-last, .pp-taboff, .pp-tabshaded, .desc, h4, h3, .darkrow1, .lastaction, .pp-datebox em, .quotetop, .quotemain, .ipbtable td, .hidetop, .hidemain, .popupmenu-category, .post-edit-reason, .codemain, .sqlmain, .htmlmain, .codetop, .sqltop, .htmltop,  span[style$="color:#000000"], span[style="color:black"], .resized-linked-image, #loading-layer-inner, form, .ed-wrap .ed-panel-title, .darkrow3, #thread_content .out_message .msg, .navbar-title, .navbar-title > strong, .newslink, .newslink td, .smalltext, .attach-messagediv, .pa_text h2, .foruminfo .foruminfo_news, .foruminfo_news:hover, span[style="font-weight:bold;color:#222222;"], .post-block > .block-title, .post-block > .block-body, .footer-nav .f-note, #ipbwrapper > div, .u-note::after, .ddbp-spec-row, .content, .footer, .maintitle td {
     color: #ccc !important;
 }
-
 #submenu a, .navbar-title > strong, .navbar-title, #thread_content .out_message .msg, .smalltext {
     text-shadow: 1px 1px 1px black;
 }
@@ -39,22 +31,22 @@ span[style="color:blue"], span[style="color:Blue"], span[style="color:#0000ff"],
     color: #508fcf !important;
 }
 .signature {
-    color: #AAA !important;
+    color: #ccc !important;
 }
 span[style="color:red"], span[style="color:#FF0000"], span[style="color:darkred"], span[style="color:crimson"], .errorwrap p, .globalmesswarncontent  {
-    color: #ff6666 !important;
+    color: #f50 !important;
 }
 span[style="color:purple"] {
-    color: #cc99ff !important;
+    color: #c8f !important;
 }
 span[style="color:teal"] {
-    color: #33cccc !important;
+    color: #3cc !important;
 }
 span[style="color:green"] {
-    color: #66cc66 !important;
+    color: #6c6 !important;
 }
 span[style="color:#290063"] {
-    color: #9042ff !important;
+    color: #58f !important;
 }
 .searchlite {
     background-color: #e8eb89 !important;
@@ -112,10 +104,10 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
     border: none !important;
 }
 #ipd-msg-inner {
-    background-color: #EEEEEE !important;
+    background-color: #ccc !important;
 }
 #events_wrapper {
-    border: solid 1px #00FF00 !important;
+    border: solid 1px #6c6 !important;
 }
 .foruminfo .grad0, .foruminfo .grad1 {
     background: linear-gradient(135deg, #000 0%, #444 100%) repeat scroll 0 0 transparent !important;
