--- a/index.css
+++ b/index.css
@@ -3,13 +3,12 @@
     display: none !important;
 }
 body {
-    background-color: #151515 !important;
+    background-color: #202020 !important;
 }
 .minipagelink, .minipagelinklast {
     border: none !important;
 }
-.borderwrap.read .row2, .borderwrap.read .post2, .borderwrap.read .post1, .borderwrap.read td.formbuttonrow,
-.lb-outerContainer, #logostrip, #header, #navbar, #replace_navbar, #list_wrapper, #footer, .menupopup .menu .item, .bg3, .activeusers, select, input.button, .plainborder, .tablefill, .tablepad, .borderwrap p, .popmenubutton-new, .popmenubutton, .hidemain, .post-edit-reason, #dw-wrapper, #dw-top, #dw-bottom, .pp-image-thumb-wrap, .pp-image-thumb-wrap-floatright, .pp-image-mini-wrap, .pp-image-mini-wrap-floatright, .resized-linked-image, .darkrow3, .postcolor, .attach-menubutton, .list_item:hover,  #welcome, .errorwrap, #redirectwrap, .attach-messagediv, .exdiv, #ucpmenu, #ucpcontent, .borderwrap, .borderwrapm, .formtable td, .pformleft, .pformleftw, .pformright, .qms_unread_row, .ed-wrap .ed-p-textarea, .bb-panel-button:hover, .check_list_div, .fieldwrap, .post-block > .block-body, .header, .sidebar, .footer-panel, .search-form, .events-count, .i-code:hover, .slider-content:after, .input-wrap, .captcha, .ed-wrap, td, #ed-0_wrap.ed_wrap, #contacts {
+.borderwrap.read .row2, .borderwrap.read .post2, .borderwrap.read .post1, .borderwrap.read td.formbuttonrow, .lb-outerContainer, #logostrip, #header, #navbar, #replace_navbar, #list_wrapper, #footer, .menupopup .menu .item, .bg3, .activeusers, select, input.button, .plainborder, .tablefill, .tablepad, .borderwrap p, .popmenubutton-new, .popmenubutton, .hidemain, .post-edit-reason, #dw-wrapper, #dw-top, #dw-bottom, .pp-image-thumb-wrap, .pp-image-thumb-wrap-floatright, .pp-image-mini-wrap, .pp-image-mini-wrap-floatright, .resized-linked-image, .darkrow3, .postcolor, .attach-menubutton, .list_item:hover,  #welcome, .errorwrap, #redirectwrap, .attach-messagediv, .exdiv, #ucpmenu, #ucpcontent, .borderwrap, .borderwrapm, .formtable td, .pformleft, .pformleftw, .pformright, .qms_unread_row, .ed-wrap .ed-p-textarea, .bb-panel-button:hover, .check_list_div, .fieldwrap, .post-block > .block-body, .header, .sidebar, .footer-panel, .search-form, .events-count, .i-code:hover, .slider-content:after, .input-wrap, .captcha, .ed-wrap, td, #ed-0_wrap.ed_wrap, #contacts {
     background: none !important;
     border: none !important;
 }
@@ -21,7 +20,7 @@ body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-
     text-shadow: 1px 1px 1px black;
 }
 #events_wrapper {
-    background-color: #252525 !important;
+    background-color: #303030 !important;
 }
 .codemain, .sqlmain, .htmlmain {
     font-family: Consolas, "Courier New", Verdana, Arial, Ubuntu, serif !important;
@@ -67,7 +66,7 @@ a:hover {
 
 /* blocks */
 .borderwrap, #userlinks, #userlinksguest, .copyright, #gfooter, .moddiv, #dw-body, .curdiv, #loading-layer-inner, .newslink, #ipbcontent, .ipbpagespan, .ipbnav, .ipbnavsmall, #ipbwrapper > .ipbtable, .message_item.in_message, .post-block.tbl.cur, .post-block.tbl.mod, .post-block.tbl.ex, body > div > div > div > div > div > form > ul > li, .footer-nav, .page {
-    background: none repeat scroll 0 0 #151515 !important;
+    background: none repeat scroll 0 0 #202020 !important;
     border: none !important;
     box-shadow: 0 0 1px white;
     padding: 10px !important;
@@ -77,13 +76,13 @@ a:hover {
     -khtml-border-radius: 1px !important;
 }
 #go_1, .content, .formtable td.formtitle, .formsubtitle, .row2, .pagelink, .pagelinklast, .pagecurrent, .minipagelink, .minipagelinklast, .pp-contentbox-back, .pp-contentbox-entry, .pp-contentbox-entry-noheight, .pp-contentbox-entry-noheight-mod, .pp-contentbox-entry-noheight-sel, .popupmenu-new, .pp-mini-content-entry, .pp-mini-content-entry-noheight, .pp-mini-entry-noheight-shaded, .post1, .post2, .bg1, .toplinks span, .pp-datebox, .popmenubutton-new, .globalmesswrap, .list_item, body[style="background:transparent;"], .globalmesswarnwrap, .list-group .list-group-item:active, .nav4pda, .form-bg, .form-toggle-visible .form-toggle-btn, .sidebar .list-group .list-group-item.active, #nav .active > *, .list-group > .list-group-item:hover, #nav .active:hover {
-    background: #252525 !important;
+    background: #303030 !important;
 }
 .navbar, .slider-content {
-    background: #252525!important;
+    background: #303030!important;
 }
 .ac_results, .row1, .popupmenu-new, .usercp_menu, .form, .list_item:hover, .menupopup .menu, .upopupmenu-new, tr td.formbuttonrow, .pformstrip, .borderwrap p.formbuttonrow, .borderwrap p.formbuttonrow1, .bar, .barb, .barc, .popupmenu, .attach-popupmenu, .attach-menu-row-over, .qms_unread_row, .list_item.active, #events-wrapper, .list-group .list-group-item, .dropdown-menu, .slider-content .meta-box, .ddbp-wframe {
-    background: #252525 !important;
+    background: #303030 !important;
 }
 .ac_over, .codemain, .sqlmain, .htmlmain, .searchinput, textarea, .ed-wrap .ed-bbcode-hover, #_fskit, #ipb-file-upload-box, input, #events-list > a:hover, #nav ul li > .slider-active, #nav li:not([class=""]) a, #nav li:not([class=""]):hover, #nav ul li > *:hover, .i-code .dropdown-menu > li > a:hover, .i-code .dropdown-menu > li > a:focus {
     background: #ccc !important;
@@ -116,17 +115,17 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
     background: linear-gradient(135deg, #000 0%, #444 100%) repeat scroll 0 0 transparent !important;
 }
 .ed-wrap .ed-vtoggle-normal, .ed-wrap .ed-vtoggle-hover, .ed-wrap .ed-vtoggle-down, #thread_content .thread_timeline .timeline, .textarea-bb-panel, .thread-list .date .text {
-    background: #252525 !important;
+    background: #303030 !important;
 }
-#ed-0_textarea, #search-in-post-query-2, #search-in-post-query-1 {
-    background: #151515 !important;
+#ed-0_textarea, #search-in-post-query-2, #search-in-post-query-1, .row2 > table.ipbtable {
+    background: #202020 !important;
 }
 /* headers */
 .pp-tabon, .hidetop, .ed-wrap .ed-panel, .posttopbar, .maintitle, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintitlecollapse, .pp-title, .pp-header, .pp-tabclear, .btn, .btn:hover, .upopupmenu-category, h4, h3, .popupmenu-category, .codetop, .sqltop, .htmltop, .button, input[type="button"], .input-ok-content, button, .post-block.spoil > .block-title, .post-block.quote > .block-title, .post-block.code > .block-title, .post-block.hidden > .block-title {
-    background: #252525 !important;
+    background: #303030 !important;
 }
 .pp-taboff, .darkrow1, .quotetop, .footer {
-    background: #252525 !important;
+    background: #303030 !important;
 }
 .maintitle, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintitlecollapse, .pp-title, .pp-header, .pp-tabclear, .btn, .btn:hover, .upopupmenu-category, h4, h3, .popupmenu-category, .codetop, .sqltop, .htmltop, .button, input[type="button"], .input-ok-content {
     border-radius: 1px !important;
@@ -154,7 +153,7 @@ button, .hidemain, .exdiv, .pagelink {
     border-color: transparent !important;
 }
 .list-group .list-group-item .bage, .list-group .list-group-item .icon-close { /* QMS date of dialog */
-    background: linear-gradient(to right, rgba(32, 32, 32, 0) 0%, #252525 20%, #252525 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+    background: linear-gradient(to right, rgba(32, 32, 32, 0) 0%, #303030 20%, #303030 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
 }
 /* fix for qms */
 #thread_content .msg {
@@ -165,7 +164,7 @@ button, .hidemain, .exdiv, .pagelink {
 }
 path[fill="#ccc"],
 circle[fill="#ccc"]{
-fill: #151515 !important;
+fill: #202020 !important;
 }
             /********* IMAGES *********/
 img[alt="Ответить"] {
