--- a/index.css
+++ b/index.css
@@ -143,6 +143,9 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
 #userlinks p, #userlinksguest p {
     font-size: 12px !important;
 }
+.maintitle, .darkrow1 {
+    background-color: #202020 !important;
+}
 button, .hidemain, .exdiv, .pagelink {
     border-color: #757575 !important;
 }
