--- a/index.css
+++ b/index.css
@@ -1,8 +1,19 @@
 @-moz-document url-prefix("http://4pda.ru/forum/"), url-prefix("https://4pda.ru/forum/") {
-.borderwrap-header td[width="80%"], .catend, #dw-top, #ipb_link_ad, .user-profile-list .margin-block {
+.borderwrap-header td[width="80%"], .catend, #dw-top, #ipb_link_ad, .user-profile-list .margin-block, #logostrip {
     display: none !important;
 }
+#ipbwrapper #userlinks {
+    position: fixed !important;
+    z-index: 999 !important;
+    width: 100% !important;
+    height: 24px !important;
+    left: 0px !important;
+    background: #222 !important;
+    box-shadow: 0px 4px 10px rgba(75,75,75,0.7) !important;
+}
+
 body {
+    margin-top: 50px !important;
     background-color: #202020 !important;
 }
 .minipagelink, .minipagelinklast {
