--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    margin-top: 50px !important;
+    padding-top: 40px !important;
     background-color: #202020 !important;
 }
 .minipagelink, .minipagelinklast {
