--- a/index.css
+++ b/index.css
@@ -2,18 +2,33 @@
 .borderwrap-header td[width="80%"], .catend, #dw-top, #ipb_link_ad, .user-profile-list .margin-block, #logostrip {
     display: none !important;
 }
+/* Header */
 #ipbwrapper #userlinks {
     position: fixed !important;
-    z-index: 999 !important;
+    z-index: 998 !important;
     width: 100% !important;
     height: 24px !important;
     left: 0px !important;
-    background: #222 !important;
-    box-shadow: 0px 4px 10px rgba(75,75,75,0.7) !important;
+    background: #202020 !important;
+    box-shadow: 0px 4px 10px rgba(55,55,55,0.7) !important;
+}
+#ipbwrapper .user_home {
+    position: absolute !important;
+    padding-top: 68px !important;
+    right: 18px !important;
+}
+#submenu  {
+    display: block !important;
+    position: fixed !important;
+    z-index: 999 !important;
+    top: 6px !important;
+    left: 45% !important;
+    width: auto !important;
 }
 
+
 body {
-    padding-top: 40px !important;
+    padding-top: 20px !important;
     background-color: #202020 !important;
 }
 .minipagelink, .minipagelinklast {
