--- a/index.css
+++ b/index.css
@@ -173,6 +173,12 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
 .maintitle {
     background-color: #202020 !important;
 }
+.upopupmenu, .upopupmenu-new, .popupmenu-new {
+    border: 1px solid #757575 !important;
+}
+.upopupmenu-item, .popupmenu-item {
+    border-bottom: 1px solid #757575 !important;
+}
 button, .hidemain, .exdiv, .pagelink {
     border-color: #757575 !important;
 }
