--- a/index.css
+++ b/index.css
@@ -47,12 +47,12 @@ body {
     border: none !important;
 }
 /* text */
-body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-checkbox, input, textarea, select, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .forumdesc, .forumdesc a:link, .forumdesc a:visited, .forumdesc a:active, table.ipbtable, tr.ipbtable, td.ipbtable, .usercp_menu, .usercp_menu_out, .popmenubutton-new, .pp-header, .pp-tiny-text, .popupmenu-item-last, .pp-taboff, .pp-tabshaded, .desc, h4, h3, .darkrow1, .lastaction, .pp-datebox em, .quotetop, .quotemain, .ipbtable td, .hidetop, .hidemain, .popupmenu-category, .post-edit-reason, .codemain, .sqlmain, .htmlmain, .codetop, .sqltop, .htmltop,  span[style$="color:#000000"], span[style="color:black"], .resized-linked-image, #loading-layer-inner, form, .ed-wrap .ed-panel-title, .darkrow3, #thread_content .out_message .msg, .navbar-title, .navbar-title > strong, .newslink, .newslink td, .smalltext, .attach-messagediv, .pa_text h2, .foruminfo .foruminfo_news, .foruminfo_news:hover, span[style="font-weight:bold;color:#222222;"], .post-block > .block-title, .post-block > .block-body, .footer-nav .f-note, #ipbwrapper > div, .u-note::after, .ddbp-spec-row, .content, .footer, .maintitle td {
+body, .user_home a, #navstrip, .formsubtitle, .input-warn, .input-green, .input-checkbox, input, textarea, select, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .forumdesc, .forumdesc a:link, .forumdesc a:visited, .forumdesc a:active, table.ipbtable, tr.ipbtable, td.ipbtable, .usercp_menu, .usercp_menu_out, .popmenubutton-new, .pp-header, .pp-tiny-text, .popupmenu-item-last, .pp-taboff, .pp-tabshaded, .desc, h4, h3, .darkrow1, .lastaction, .pp-datebox em, .quotetop, .quotemain, .ipbtable td, .hidetop, .hidemain, .popupmenu-category, .post-edit-reason, .codemain, .sqlmain, .htmlmain, .codetop, .sqltop, .htmltop,  span[style$="color:#000000"], span[style="color:black"], .resized-linked-image, #loading-layer-inner, form, .ed-wrap .ed-panel-title, .darkrow3, #thread_content .out_message .msg, .navbar-title, .navbar-title > strong, .newslink, .newslink td, .smalltext, .attach-messagediv, .pa_text h2, .foruminfo .foruminfo_news, .foruminfo_news:hover, span[style="font-weight:bold;color:#222222;"], .post-block > .block-title, .post-block > .block-body, .footer-nav .f-note, #ipbwrapper > div, .u-note::after, .ddbp-spec-row, .content, .footer, .maintitle td, .input-ok-content {
     color: #ccc !important;
 }
 #events_wrapper, .ed-wrap .ed-p-textarea, .ed-wrap .ed-textarea {
     background-color: #303030 !important;
-/*  background: #303030 !important; */
+    background: #303030 !important;
 }
 .codemain, .sqlmain, .htmlmain {
     font-family: Consolas, "Courier New", Verdana, Arial, Ubuntu, serif !important;
@@ -150,6 +150,10 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
 #ed-0_textarea, #search-in-post-query-2, #search-in-post-query-1, .row2 > table.ipbtable, .foruminfo .grad0, .foruminfo .grad1 {
     background: #202020 !important;
 }
+.forum-attach-form .forum-attach-file-border {
+    border: 1px solid #757575 !important;
+    background: #454545 !important;
+}
 
 /* headers */
 .pp-taboff, .quotetop, .footer, .ipbtable read, .pp-tabon, .hidetop, .ed-wrap .ed-panel, .posttopbar, .maintitle, table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintitlecollapse, .pp-title, .pp-header, .pp-tabclear, .btn, .btn:hover, .upopupmenu-category, h4, h3, .popupmenu-category, .codetop, .sqltop, .htmltop, .button, input[type="button"], .input-ok-content, button, .post-block.spoil > .block-title, .post-block.quote > .block-title, .post-block.code > .block-title, .post-block.hidden > .block-title {
@@ -174,7 +178,7 @@ table th, .borderwrap table th, .subtitle, .subtitlediv, .postlinksbar, .maintit
 .maintitle {
     background-color: #202020 !important;
 }
-.popupmenu, .upopupmenu, .upopupmenu-new, .popupmenu-new {
+.popupmenu, .upopupmenu, .upopupmenu-new, .popupmenu-new, .input-ok-content {
     border: 1px solid #757575 !important;
 }
 .upopupmenu-item, .popupmenu-item {
