--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body {
 .minipagelink, .minipagelinklast, .u-note {
     border: none !important;
 }
-.borderwrap.read .row2, .borderwrap.read .post2, .borderwrap.read .post1, .borderwrap.read td.formbuttonrow, .lb-outerContainer, #logostrip, #header, #navbar, #replace_navbar, #list_wrapper, #footer, .menupopup .menu .item, .bg3, .activeusers, select, input.button, .plainborder, .tablefill, .tablepad, .borderwrap p, .popmenubutton-new, .popmenubutton, .hidemain, .post-edit-reason, #dw-wrapper, #dw-top, #dw-bottom, .pp-image-thumb-wrap, .pp-image-thumb-wrap-floatright, .pp-image-mini-wrap, .pp-image-mini-wrap-floatright, .resized-linked-image, .darkrow3, .postcolor, .attach-menubutton, .list_item:hover,  #welcome, .errorwrap, #redirectwrap, .attach-messagediv, .exdiv, #ucpmenu, #ucpcontent, .borderwrap, .borderwrapm, .formtable td, .pformleft, .pformleftw, .pformright, .qms_unread_row, .bb-panel-button:hover, .check_list_div, .fieldwrap, .post-block > .block-body, .header, .sidebar, .footer-panel, .search-form, .events-count, .i-code:hover, .slider-content:after, .input-wrap, .captcha, .ed-wrap, td, #ed-0_wrap.ed_wrap, #contacts, .borderwrap > .formsubtitle, #ed-0_ap > table {
+.borderwrap.read .row2, .borderwrap.read .post2, .borderwrap.read .post1, .borderwrap.read td.formbuttonrow, .lb-outerContainer, #logostrip, #header, #navbar, #replace_navbar, #list_wrapper, #footer, .menupopup .menu .item, .bg3, .activeusers, select, input.button, .plainborder, .tablefill, .tablepad, .borderwrap p, .popmenubutton-new, .popmenubutton, [data-post] .popmenubutton-new, [data-post] .popmenubutton-new-out, .hidemain, .post-edit-reason, #dw-wrapper, #dw-top, #dw-bottom, .pp-image-thumb-wrap, .pp-image-thumb-wrap-floatright, .pp-image-mini-wrap, .pp-image-mini-wrap-floatright, .resized-linked-image, .darkrow3, .postcolor, .attach-menubutton, .list_item:hover,  #welcome, .errorwrap, #redirectwrap, .attach-messagediv, .exdiv, #ucpmenu, #ucpcontent, .borderwrap, .borderwrapm, .formtable td, .pformleft, .pformleftw, .pformright, .qms_unread_row, .bb-panel-button:hover, .check_list_div, .fieldwrap, .post-block > .block-body, .header, .sidebar, .footer-panel, .search-form, .events-count, .i-code:hover, .slider-content:after, .input-wrap, .captcha, .ed-wrap, td, #ed-0_wrap.ed_wrap, #contacts, .borderwrap > .formsubtitle, #ed-0_ap > table {
     background: none !important;
     border: none !important;
 }
@@ -193,6 +193,9 @@ button, .hidemain, .exdiv, .pagelink {
 .barc, .usercp_menu_out, .navbar {
     border-color: transparent !important;
 }
+.popmenubutton-new-out {
+    padding: 3px !important;
+}
 .list-group .list-group-item .bage, .list-group .list-group-item .icon-close { /* QMS date of dialog */
     background: #202020 !important;
 }
@@ -203,9 +206,8 @@ button, .hidemain, .exdiv, .pagelink {
 .message_item {
     margin-top: 1em !important;
 }
-path[fill="#ccc"],
-circle[fill="#ccc"]{
-fill: #202020 !important;
+path[fill="#ccc"], circle[fill="#ccc"]{
+    fill: #202020 !important;
 }
             /********* IMAGES *********/
 img[alt="Ответить"] {
